--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#project-design">PROJECTS</a></span>
       <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
+      <span><a href="#skills">SKILLS</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       </div>
@@ -42,13 +43,13 @@
     <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
     <h1 id="page-header">Hi, I'm Asmit!</h1>
     <br>
-    <h2 id="page-subheader">Welcome to my WORK PORTFOLIO, a virtual showcase of my current and future work. 
-      It is an attempt to build my first digital masterpiece. This website will walk you through over my 
-      engineering career and will help you to understand what my background is, what I have accomplished and what
-      I can achieve in the future.
+    <h2 id="page-subheader">Welcome to my WORK PORTFOLIO, a virtual showcase of my multidisciplinary engineering career. 
+      It is an attempt to build my first digital masterpiece, which is an easy way to demonstrate my projects and prior work experience 
+      in different domains and industries. This website will walk you through over my comprehensive work samples and will help you to 
+      understand what my background is, what I have accomplished and what I am capable of achieving in the future.
     <br>
       <br>
-      <p>⚠️<i> This site is under construction. Stay Tuned!</i></p></h2>
+      <p>⚠️<i>This website is under construction. So please stay tuned and visit again for new updates!</i></p></h2>
     <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>-->
    </div>
   <br>
@@ -204,26 +205,21 @@
 
       <p>
         I am a Mechanical Engineer from the University of Massachusetts, Amherst. I recently completed my Master of Science (MS)
-        degree from the College of Engineering in May 2019. I am currently working as an Additive Manufacturing & Design Engineer 
-        at ADDFab Lab in Life Sciences Laboratories.
+        degree from the College of Engineering in May 2019. I am currently working as a Research & Development Engineer at Excel Dryer, Inc
+        and part-time as an Additive Manufacturing & Design Engineer at ADDFab Lab in Life Sciences Laboratories - UMass Amherst.
         <br>
         <br>
-        I have a prior industry experience of over two years and research experience of over a year at top-notch labs in UMass. 
+        I have a prior industry experience of over two years and research experience of over two year at top-notch labs in UMass. 
         During my engineering career, I have worked on a variety of projects and have played a part in researching and developing
         new technologies, product quality improvements, cost reductions efforts for products, efficiency and productivity enhancement,
         and developing strong business relations with the customers, vendors and suppliers. 
         <br>
         <br>
-        I have honed my skills in Product and Process Design & Development, CAD modeling, Advanced Manufacturing and Rapid Prototyping
+        I have honed my skills in Product and Process Design & Development, CAD Modeling, Advanced Manufacturing and Rapid Prototyping
         techniques like Additive Manufacturing, which is known as 3D Printing, Lean Six Sigma, Advanced Data Analysis, and a few skills
         of industrial automation like PLC & HMI/SCADA Systems. I believe that all the industrial experiences coupled with my academics
         have helped me to augment my project management, problem-solving, communication skills, and collaborative skills in the
         fast-paced environment. </p>
-
-
-      <p><b>Looking for full time opportuinities starting in September 2019.</b></p>
-
-      <button type="button" class="button" onclick="window.open('https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view','_blank');" alt="Link to Resume">Resume</button>
 
       <br>
       <br>
@@ -234,6 +230,8 @@
   
 <!-- External links Section BEGINS -->
   <div class="footer">
+    <span><a href="https://www.facebook.com/thisisasmit" target="_blank"><img src="./images/social/facebook.svg" alt="Link to Facebook Profile"></a></span>
+    <span><a href="https://www.instagram.com/asmitjain/" target="_blank"><img src="./images/social/insta.svg" alt="Link to Instagram Profile"></a></span>
     <span><a href="https://github.com/asmitjain" target="_blank"><img src="./images/social/github.svg" alt="Link to Github Profile"></a></span>
     <span><a href="https://www.linkedin.com/in/thisisasmit" target="_blank"><img src="./images/social/linkedin.svg" alt="Link to Linkedin Profile"></a></span>
     <span><a href="https://twitter.com/thisisasmit" target="_blank"><img src="./images/social/twitter.svg" alt="Link to Twitter Profile"></a></span>
