--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
 <!-- External links Section BEGINS -->
   <div class="footer">
     <span><a href="https://www.facebook.com/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/facebook-new.png" alt="Link to Facebook Profile"></a></span>
-    <span><a href="https://www.instagram.com/asmitjain/" target="_blank"><img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="Link to Instagram Profile"></a></span>
-    <span><a href="https://github.com/asmitjain" target="_blank"><img src="./images/social/github.svg" alt="Link to Github Profile"></a></span>
-    <span><a href="https://www.linkedin.com/in/thisisasmit" target="_blank"><img src="./images/social/linkedin.svg" alt="Link to Linkedin Profile"></a></span>
-    <span><a href="https://twitter.com/thisisasmit" target="_blank"><img src="./images/social/twitter.svg" alt="Link to Twitter Profile"></a></span>
+    <span><a href="https://www.instagram.com/asmitjain/" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/instagram--v1.png" alt="Link to Instagram Profile"></a></span>
+    <span><a href="https://github.com/asmitjain" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/github.png" alt="Link to Github Profile"></a></span>
+    <span><a href="https://www.linkedin.com/in/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/linkedin--v2.png" alt="Link to Linkedin Profile"></a></span>
+    <span><a href="https://twitter.com/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/twitter--v1.png" alt="Link to Twitter Profile"></a></span>
   </div>
   <!-- External links Section ENDS -->
 
