--- a/Project1.html
+++ b/Project1.html
@@ -28,6 +28,90 @@
   <!-- Sticky Header ENDS -->
   
   
+  
+  <html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hexi-Flexi-Grid</title>
+    <link rel="stylesheet" href="assets/css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Open+Sans:400,600|Oxygen+Mono" rel="stylesheet">
+  </head>
+<body>
+<div class="grid-y grid-frame">
+<div class="cell cell-block-container">
+<div class="cell-block-y">
+  <div id="hexGridHeader">
+    <div class="hexCrop">
+      <div class="hexContainer">
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"><span>H</span></div>
+        <div class="hex"><span>E</span></div>
+        <div class="hex"><span>X</span></div>
+        <div class="hex"><span>I</span></div>
+        <div class="hex"></div>
+        <div class="hex"><span>F</span></div>
+        <div class="hex"><span>L</span></div>
+        <div class="hex"><span>E</span></div>
+        <div class="hex"><span>X</span></div>
+        <div class="hex"><span>I</span></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+        <div class="hex"></div>
+      </div>
+    </div>
+  </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <!-- Project1 Section BEGINS -->
     <div class="project-design" id="project-design">
       <h2><span class="underline-magical-sub-header">Project 1</span></h2>
