--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   
   <!-- Projects Section BEGINS -->
   <div class="project-design" id="project-design">
-    <h2><span class="underline-magical-sub-header">Projects</span></h2>
+    <h2><span class="underline-magical-sub-header">PROJECTS</span></h2>
     <p>
       I have worked on a variety of projects and have a part in researching and developing new processes, enhancing productivity
       and efficiency of the manufacturing lines, prototyping new devices, advanced data analysis, optimizing products, 
@@ -135,7 +135,7 @@
   
   <!-- Work Experience Section BEGINS -->
   <div class="workexp-design" id="workexp-design">
-    <h2><span class="underline-magical-sub-header">Work Experience</span></h2>
+    <h2><span class="underline-magical-sub-header">WORK EXPERIENCE</span></h2>
     <p>
       I have worked at three different automotive companies combining my internship/ full-time roles. These roles were mostly related to
       design & manufacturing domain where I got opportunities to work in Cross-Functional Teams. Additionally, I have worked at top-notch
@@ -199,7 +199,7 @@
    
   <!-- About Section BEGINS -->
   <div class="about" id="about">
-    <h2><span class="underline-magical-sub-header">About</span></h2>
+    <h2><span class="underline-magical-sub-header">ABOUT</span></h2>
     <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
     <div class="about-grid">
 
