--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#project-design">PROJECTS</a></span>
       <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
-      <span><a href="#skills">SKILLS</a></span>
+      <span><a href="#skills-design">SKILLS</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       </div>
