--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
   </div>
   <!-- Sticky Header ENDS -->
   
+  
+  <div class="lines">
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+</div>
+
+  
+  
   <!-- Introduction Section Begins -->
   <div class="landing-header">
     <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
