--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="sub-project">
       <a href="Project3.html" target="_self">
         <img src="./images/asmitjainPLC.png" class="project-image" alt="Image of my project3">
-        <h3 class="card-title">PLC Programming for Automating Industrial Equipment </h3>
+        <h3 class="card-title">PLC Programming for Industrial Automation</h3>
         <p class="card-subtitle">PROGRAMMABLE LOGIC CONTROLLER . AUTOMATION</p>
       </a>
     </div>
