--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <p>
       I have worked at three different automotive companies combining my internship/ full-time roles. These roles were mostly related to
       design & manufacturing domain where I got opportunities to work in Cross-Functional Teams. Additionally, I have worked at top-notch
-      Research & Development labs at UMass Amherst. I worked on a variety of projects and developed some amazing technical skills in multiple domains. 
+      research labs at UMass Amherst. I worked on a variety of projects and developed some amazing technical skills in multiple domains. 
     </p>
   </div>
 
@@ -203,16 +203,16 @@
   <div class="skills-design" id="skills-design">
     <h2><span class="underline-magical-sub-header">SKILLS</span></h2>
     <p>
-      I have worked at three different automotive companies combining my internship/ full-time roles. These roles were mostly related to
-      design & manufacturing domain where I got opportunities to work in Cross-Functional Teams. Additionally, I have worked at top-notch
-      Research & Development labs at UMass Amherst. I worked on a variety of projects and developed some amazing technical skills in multiple domains. 
+      Mechanical engineers always need to be technically minded, able to demonstrate numerical and scientific ability and
+      have problem-solving skills. With this approach, I have always tried to augment some of the best technical and software skills
+      which could be helpful at the workplace to encounter complex and unfamiliar engineering problems and derive the best data-
+      driven solutions. My involvement in different projects has built my interest in learning advanced software which includes: 
     </p>
   </div>
 
   <div class="prjt">
     <div class="sub-project">
      
-        <img src="./images/asmitjainEDFabthumbnail.jpg" class="project-image" alt="ED">
         <h3 class="card-title">CAD Modelling</h3>
         <p class="card-subtitle">SolidWorks  .  AutoCAD</p>
       </a>
