--- a/index.html
+++ b/index.html
@@ -288,24 +288,17 @@
 
   <div class="prjt">
     <div class="sub-project">
-      <a href="Project1.html" target="_self">
         <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project1">
-        <h3 class="card-title">3D Scanner for Medical Applications</h3>
-        <p class="card-subtitle">DESIGN . PROTOTYPING</p>
-      </a>
-    </div>
+        <h3 class="card-title">Master of Science (M.S.)</h3>
+        <p class="card-subtitle">University of Massachusetts Amherst</p>
+     </div>
   <div class="sub-project">
-      <a href="Project2.html" target="_self">
         <img src="./images/asmitjainMachineLearning.png" class="project-image" alt="Image of my project2">
-        <h3 class="card-title">Fault Detection & Prediction using Machine Learning</h3>
-        <p class="card-subtitle">DATA ANALYSIS . PREDICTIVE MAINTAINANCE</p>
-      </a>
-    </div>
+        <h3 class="card-title">Bachelor of Science (B.S.)</h3>
+        <p class="card-subtitle">MIT Ujjain (RGPV)</p>
+     </div>
   </div>
-  </div>
-    
-    
-
+  
 <p>
         I am a Mechanical Engineer from the University of Massachusetts, Amherst. I recently completed my Master of Science (MS)
         degree from the College of Engineering in May 2019. I am currently working as a Research & Development Engineer at Excel Dryer, Inc
