--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">ABOUT</span></h2>
-    <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
+    <img src="./images/asmitjainProfile.png" alt="It's me, Asmit">
          
 <p>
         I am a Mechanical Engineer from the University of Massachusetts, Amherst. I recently completed my Master of Science (MS)
