--- a/MAN2.html
+++ b/MAN2.html
@@ -19,10 +19,10 @@
   <div id="sticky-header">
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
-      <span><a href="#project-design">PROJECTS</a></span>
-      <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
-      <span><a href="#skills-design">SKILLS</a></span>
-      <span><a href="#about">ABOUT</a></span>
+      <span><a href="index.html#project-design">PROJECTS</a></span>
+      <span><a href="index.html#workexp-design">WORK EXPERIENCE</a></span>
+      <span><a href="index.html#skills-design">SKILLS</a></span>
+      <span><a href="index.html#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
      </div>
   </div>
@@ -83,7 +83,8 @@
             disassembly of a vehicle in order to ship it to another site for final assembly.
            <br>
            <br>
-
+           <br>
+           <br>
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
@@ -127,6 +128,7 @@
       
       </p>
       </div>
+  </div>
 
       
    <!-- XL Section ENDS -->
