--- a/MAN1.html
+++ b/MAN1.html
@@ -44,7 +44,7 @@
           <p><b><i> Overview:</i></b>
             <br>
             <br>
-            In the summer of 2018, I was shortlisted for the Production Management Intern position at MAN Trucks India. It was a manufacturing facility for the 
+            In the summer of 2018, MAN Trucks India shortlisted me for the Production Management Intern position. It is a manufacturing facility for the 
             best in class german trucks for the Asia Pacific region. It was my second work experience at this plant. After 4 years, I really enjoyed the nostalgia
             brought on by this experience. Many things changed but the layout was the same. They added up new high-tech machineries, installed
             5-6 different production lines for new models and developed a new training division for production. It was exciting!
@@ -89,17 +89,17 @@
         <br>
         <br>
         - Optimized the axle line layout using AutoCAD to reduce material handling cost, improve throughput, minimize space requirements
-        and lower energy bills wihin 30 days.
+        and lower energy bills within 30 days.
         <br>
         <br>
-        - Implemented one-piece flow of material from start to finish with as little WIP inventory for front and rear axle line.
+        - Implemented a one-piece flow of material from start to finish with as little WIP inventory for front and rear axle line.
         <br>
         <br>
         - Reduced the storage racks to confine the machines and working table in an optimal or near optimal area for making 
         space for new projects.
         <br>
         <br>
-        - Observed and scrutenized the complete assembly processes for the axle line along with the preparation of sub-assemblies.
+        - Observed and scrutinized the complete assembly processes for the axle line along with the preparation of sub-assemblies.
         <br>
         <br>
         - Optimize the current material storage systems for the Front and Rear Axle with consideration of the protection, storage, 
@@ -107,7 +107,7 @@
         <br>
         <br>
         - Improved material handling to create time and place utility through the handling, storage, and control of material, 
-        as distinct from manufacturing, which creates form utility by changing the shape, form, and makeup of material.
+        as distinct from manufacturing, which creates form utility by changing the shape, form, and makeup of the material.
 <br>
         <br>
         Material organization has been integral to the design of most production systems since the efficient flow of material between
