--- a/MAN1.html
+++ b/MAN1.html
@@ -89,11 +89,12 @@
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
-        - Optimized the axle line layout using AutoCAD to reduce material handling cost, improve throughput, minimize space requirements
-        and lower energy bills within 30 days.
+        - Optimized the axle line layout using AutoCAD to reduce material handling cost, improve throughput and minimize space requirements
+        by setting and deploying guidlines, SOPs and process flows  within 30 days.
         <br>
         <br>
-        - Implemented a one-piece flow of material from start to finish with as little WIP inventory for front and rear axle line.
+        - Implemented a one-piece flow of material from start to finish with as little WIP inventory for front and rear axle line and
+        reduced the axle assembly time by 20%.
         <br>
         <br>
         - Reduced the storage racks to confine the machines and working table in an optimal or near optimal area for making 
@@ -109,7 +110,7 @@
         <br>
         - Improved material handling to create time and place utility through the handling, storage, and control of material, 
         as distinct from manufacturing, which creates form utility by changing the shape, form, and makeup of the material.
-<br>
+        <br>
         <br>
         Material organization has been integral to the design of most production systems since the efficient flow of material between
         the activities of a production system is heavily dependent on the arrangement (or layout) of the activities. If two activities
