--- a/MAHLE.html
+++ b/MAHLE.html
@@ -45,42 +45,33 @@
           <p><b><i> Overview:</i></b>
             <br>
             <br>
-            I got the opportunity to work as a Sales & Application Engineer at MAHLE Engine Components India. This was my first
+            I got the opportunity to work as a Sales & Application Engineer at MAHLE Engine Components India in April 2016. This was my first
             full-time role after my bachelor's degree. I was based out of Pithampur plant in Madhya Pradesh, India. It was a 
             techno-commercial job where I worked on new & running projects with 25 automotive companies worldwide and applied my engineering
             skills to understand how things work for application engineering part.
-<br>
-          <br>
-
-           As this was my first encounter within an industrial setting, my motivation to work at MAN Trucks was to gain insight into how a company works, what all departments
-           a company has, what kinds of machines a company uses and to get a deeper understanding of automotive engineering. Before describing
-           anything about my projects, I'd like to tell you more about the company.
           <br>
           <br>
-            MAN (Maschinenfabrik Augsburg- Nürnberg) SE, formerly MAN AG, is a German mechanical engineering company and parent 
-            company of the MAN Group. MAN SE is based in Munich. Its primary output is for the automotive industry, particularly
-            heavy trucks. Further activities include the production of diesel engines for various applications, like ship propulsion, 
-            and also turbo machinery.
-<br>
-            <br>
-            MAN supplies trucks, buses, diesel engines and turbo machinery. The company celebrated its 250th anniversary in 2008. 
-            The company operates through fully owned subsidiaries or joint ventures with local companies in India, Poland, Turkey, 
-            China, United States, United Arab Emirates, South Africa, Uzbekistan, Portugal and Germany/Austria. In India, MAN Trucks 
-            India Pvt. Ltd., a 100% subsidiary of MAN Truck & Bus AG, Germany, manufactures heavy trucks and buses, both for the 
-            Indian market as well as for export to Asian, the Middle East and African countries. The MAN CLA range of products
-            manufactured by MAN Trucks India has made a mark not only in India but also has a significant presence in around 25 
-            countries.
-            
+            MAHLE group ranks among the top three system suppliers worldwide with 140 production locations on 5 continents. It has 5 
+            different business units and 7 different profit centers. Some of the business units include: 
+            <br> - Engine Systems and Components
+            <br> - Filteration and Engine Peripherals
+            <br> - Thermal Management
+            <br> - Industry
+            <br> - Aftermarket
             <br>
             <br>
-            MAN Trucks India started its operations in 2006 to cater the country’s requirement for high-quality transport solutions. 
-            Our aim is to manufacture excellent quality products by creating a safe, clean and environmently friendly workplace.” The 
-            Pithampur manufacturing plant in Madhya Pradesh has been producing trucks for the Indian market and for export to countries 
-            in Asia and Africa since 2006. Its products range from chassis to tippers for the construction industry and semitrailer 
-            tractors for long haul transport. By acquiring full ownership, MAN Truck & Bus India has now taken sole responsibility 
-            for the production and sale of the trucks both within and outside India. Truck in the Box. As the name suggests, Truck
-            in the Box TIB is the MAN concept for CKD (Completely knocked down) or SKD (Semi knocked down) vehicles – i.e. the 
-            disassembly of a vehicle in order to ship it to another site for final assembly.
+            MECI Pithampur is the largest producer of engine components and valve tappets in India with over 50% of market share. They 
+            supply camshafts and valve tappets to all the major OEMs. MAHLE has two manufacturing facilities in Pithampur. 
+            I was fortunate to work and manage both the manufacturing sites. One is the foundry
+            which is equipped with the advanced Green Sand & Shell Sand. It is used to produce high volume cast engine components. 
+            And the other one is for machining, where all the VMCs and HMCs are used for machining the cast components. 
+            <br>
+            <br>
+            I got exposure to all types of processes related to manufacturing, quality, production planning, sales, budgeting, etc which
+            was very helpful to understand the cross functional team environment at MAHLE. As an engineer, I was involved in numerous projects
+            as a cross functional team member with different departments to contribute to the company to develop and deliver high
+            quality products. 
+                      
            <br>
            <br>
            <br>
