--- a/MAHLE.html
+++ b/MAHLE.html
@@ -68,8 +68,8 @@
             <br>
             <br>
             I got exposure to all types of processes related to manufacturing, quality, production planning, sales, budgeting, etc which
-            was very helpful to understand the cross functional team environment at MAHLE. As an engineer, I was involved in numerous projects
-            as a cross functional team member with different departments to contribute to the company to develop and deliver high
+            was very helpful to understand the working environment at MAHLE. Being an engineer, I was involved in numerous projects
+            and took part as a cross functional team member with different departments to contribute to the company to develop and deliver high
             quality products. 
                       
            <br>
@@ -79,38 +79,16 @@
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
-                   - Observed and scrutinize Semi-Finish for 6 different types of MAN engines. It helped me to understand how a large amount
-                     of material is removed from engine block castings. It involved detailed processes from receiving material from the vendors to mounting it
-                     various HMC & VMC using jigs & fixtures. 
+                   - Understood the complete foundry and machining processes along with inspection and measurment techniques. 
+        Learned in detail about the green sand, shell sand, ADCOLE, 3CMM, roundness and surface finish tester, spectrometer, etc
         <br>
         <br>
-                   - Studied Finish line for engines to focus on removing a small amount of material and perform finishing operations. I learned 8 Spindle 
-                     Boring machine, 10 Spindle Drilling and Tapping machine, Piston Bore Honing, etc.
+        - Conducted thorough study about different types of materials like chill cast, ductile iron, etc with shot blasting, crack testing
+        along with heat treatment processes like Nitriding, Phosphating, Induction Hardening, Tempering & Stress Relieving.
         <br>
         <br>
-                   - Support Dead Axle and Engine Cylinder Head team for routine machine maintenance operations.
-        <br>
-        <br>
-                   - Conducted detailed research on Horizontal Milling Center Machines and Vertical Milling Center Machines and its components. It included
-                     Machine body, CNC system, Electrical cabinet, Pneumatic system, Coolant system, Guards, Tool magazine. 
-
-        <br>
-        <br>
-                   - Performed troubleshooting for increasing the clamping force of a spindle in VMC and reduced wear, tear and noise of rotating elements.
-        <br>
-        <br>
-                   - Learned and performed cycle time analysis for different machines to reduce the takt time and lead time.
-        <br>
-        <br>
-                   - Prepared technical documentation for hydraulics and pneumatic components from Bosch, EATON and Yuken.  
-        <br>
-        <br>
-                   - Trained other interns by demonstrating machining operactions and explaining working principles of all the machines 
-                     on the engine and axle line. 
-      <br>
-      <br>
-                   - Computed a detailed report and presented my project on Hydraulics, Pneumatics and Kinematics to team members and departmental
-                     head upon internship completion.
+        - Studied microstructure and metallurgy for case hardening, case depth, particle count, grinding burns with 32 channel spectrometer.  
+        
       <br>
       <br>
       <img src="./images/MAHLEpic2.png" alt="XL2" class="center">
