--- a/VECV.html
+++ b/VECV.html
@@ -39,7 +39,7 @@
       <h2> Technical Services Intern at Volvo-Eicher Commercial Vehicles
         <br>
         <br>
-    <img src="./images/VECVpic1.png" alt="VECV" class="center">
+    <img src="./images/VECVpic1.PNG" alt="VECV" class="center">
         <br>
           <br>
           <p><b><i> Overview:</i></b>
@@ -118,7 +118,7 @@
         <br>
         - Coordinated in schedule and supply monitoring, logistics, eCommerce and Incoterms for the supply chain management.
         <br> <br> <br>
-        <img src="./images/VECVpic2.jpeg" alt="XL2" class="center">
+        <img src="./images/VECVpic2.jpg" alt="XL2" class="center">
       <br>
           
       
